boot/tests/errors/record_missing_err/record_missing_err.c
%s Record '%s' must have fields: '%s'.
